[RED] add tests for PaymentService